--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,10 @@
-html{
+html {
   box-sizing: border-box;
 }
 
 *,
 *::after,
-*::before{
+*::before {
   box-sizing: inherit;
 }
 
@@ -36,6 +36,10 @@ ul[class] {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 img {
   max-width: 100%;
   display: block;
@@ -48,28 +52,47 @@ select {
   font: inherit;
 }
 
-body{
+body {
   min-height: 100vh;
+  color: #242121;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 14px;
   line-height: 18px;
   letter-spacing: 0.6px;
-  font-style: normal;
-  color: #242121;
-  font: {
-    family: 'Roboto Condensed', sans-serif;
-    size: 14px;
-    weight: 300;
+  background-color: #ffffff;
+  overflow-x: hidden;
+}
+
+.container {
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 56px;
+  color: #01353e;
+  text-transform: uppercase;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 100px;
+
+  &:after {
+    content: url(../images/slash.svg);
+    position: relative;
+    top: 24px;
+    right: 10px;
   }
 }
 
-.container{
-  max-width: 1220px;
-  padding: 0 10px;
-  margin: 0 auto;
-}
 
-.header{
-  background-image: url('../images/bg.jpg');
-  height: 100vh;
+.header {
+  background-image: url("../images/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -80,23 +103,58 @@ body{
     display: flex;
     align-items: center;
   }
+
+  &__content-inner {
+    min-height: calc(100vh - 98px);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  &__subtitle {
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+    font-size: 200px;
+    line-height: 235px;
+    color: #0d302c;
+    margin-top: 340px;
+    margin-left: 46px;
+    text-transform: uppercase;
+  }
+
+  &__title {
+    max-height: 28px;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    margin-bottom: 378px;
+    padding-left: 4px;
+  }
+
+
+  &__icon {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 92px;
+  }
 }
 
-.menu{
+.menu {
   margin: 0 auto;
   padding: 0 auto;
 
-  &__list{
+  &__list {
     display: flex;
   }
 }
 
-.menu__list-item + .menu__list-item{
+.menu__list-item + .menu__list-item {
   margin-left: 39px;
 }
 
-
-.menu__list-link{
+.menu__list-link {
   padding: 0 3px 5px;
   font-size: 24px;
   line-height: 28px;
@@ -104,46 +162,393 @@ body{
   color: #fff;
   font-weight: normal;
   letter-spacing: 0.6px;
-  transition: all .5s;
+  transition: all 0.5s;
 
-  &:hover{
-    border-bottom: 1px solid #00B2A0;
+  &:hover {
+    border-bottom: 1px solid #00b2a0;
   }
 }
 
-.header__content-inner{
-  text-align: center;
+.about {
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__title {
+    margin: 182px 0 100px 0;
+  }
+
+  &__container {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 175px;
+
+  & p {
+    max-width: 480px;
+    margin-bottom: 26px;
+    margin-right: 120px;
+    }
+  }
+}
+
+.school {
+  background-color: #f8f8f8;
+  padding: 195px 0 169px;
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+  }
+
+  &__item {
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+    &-head {
+      display: flex;
+      align-items: center;
+      height: 56px;
+      margin-bottom: 19px;
+
+      &--live:before {
+        content: url("../images/live.svg");
+        width: 55px;
+        height: 50.12px;
+        top: 0;
+        margin-right: 10px;
+      }
+
+      &--fly:before {
+        content: url("../images/fly.svg");
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+      }
+
+      &--study:before {
+        content: url("../images/study.svg");
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+      }
+    }
+
+    &-title {
+      line-height: 28px;
+
+      font: {
+        size: 24px;
+        weight: 400;
+        style: normal;
+      }
+    }
+
+    &-text {
+      display: flex;
+    }
+  }
+
+  &__img {
+    margin-right: 10px;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__info {
+    padding-top: 5px;
+    margin-right: 250px;
+
+    &-item {
+      width: 290px;
+      padding-bottom: 10px;
+    }
+
+    &-wawe {
+      background-image: url("../images/wawe.svg");
+      background-repeat: no-repeat;
+      background-size: 100%;
+      background-position: center;
+      height: 20px;
+      position: relative;
+    }
+
+    &-percent {
+      font-weight: 400;
+      font-size: 24px;
+      padding-left: 10px;
+      position: absolute;
+      right: -50px;
+      top: -2px;
+    }
+  }
+
+  &__info-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.teachers {
+  background-image: url("../images/teachers.jpg");
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: right top;
+
+  &__inner {
+    padding: 197px 0 200px;
+    width: 570px;
+  }
+
+  &__text p {
+    max-width: 510px;
+    margin-bottom: 30px;
+  }
+}
+
+.gallery {
+  background-color: #ffffff;
+  text-align: center;
+
+  &__title {
+    text-align: center;
+    margin: 146px 0 216px 0;
+  }
+
+  &__filter-btn {
+    margin-bottom: 50px;
+    text-align: left;
+  }
+
+  &__btn{
+    text-transform: uppercase;
+    background-color: transparent;
+    border: none;
+    outline: 0;
+    padding: 0;
+    cursor: pointer;
+
+    font: {
+      weight: 400;
+      size: 24px;
+    }
+  }
+
+  &__btn + &__btn {
+    padding-left: 20px;
+    padding-right: 0;
+  }
+  
+  &__content {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -20px 10px -20px;
+  }
+
+  &__item {
+    margin: 0 20px 40px 20px;
+    position: relative;
+  }
+
+  &__link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.6;
+    background-color: transparent;
+    transition: opacity, background-color 2s;
+    
+    &:hover {
+      opacity: 0.6;
+      background-color: #000000;
+    }
+  }
+  
+
+  &__add {
+    background-color: #ffffff;
+    border: 1px solid #c4c4c4;
+    text-transform: uppercase;
+    transition: background-color 1s, transform 1s;
+    padding: 24px 91px;
+    cursor: pointer;
+    
+    font: {
+      family: "Roboto Condensed", sans-serif;
+      size: 24px;
+      weight: 400;
+    }
+    
+    &:hover {
+      background-color: #00b2a0;
+      transform: scale(1.05);
+    }
+  } 
+
+  &__blockquote {
+    background-color: #f8f8f8;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 200px;
+
+    &-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      width: 725px;
+      padding-top: 80px;
+      line-height: 40px;
+
+      font: {
+        family: "Roboto Condensed", sans-serif;
+        style: italic;
+        weight: normal;
+        size: 36px;
+      }
+    }
+
+    &-author {
+      display: flex;
+      justify-content: flex-end;
+      padding-bottom: 60px;
+      line-height: 40px;
+
+      font: {
+        family: "Roboto Condensed", sans-serif;
+        style: italic;
+        weight: 300;
+        size: 14px;
+      }
+    }
+  }
+
+  &__video {
+    background-image: url("../images/video-bg.jpg");
+    height: 600px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 200px;
+  }
+
+  &__numbers {
+    display: flex;
+    justify-content: space-evenly;
+
+    &-item {
+      text-align: center;
+      color: #01353e;
+      margin-bottom: 5px;
+      line-height: 75px;
+
+      font: {
+        style: normal;
+        weight: bold;
+        size: 64px;
+      }
+
+      & span {
+        color: #242121;
+        display: block;
+        line-height: 18px;
+
+        font: {
+          style: normal;
+          weight: 300;
+          size: 14px;
+        }
+      }
+    }
+  }
+}
+
+.mixitup-control-active{
+  color: #00B2A0;
+}
+
+.blog{
+  background-color: #fff;
+  padding-top: 200px;
+
+  &__title{
+    margin: 0 0 200px 0;
+  }
+}
+
+.slider{
+  position: relative;
+
+  &__item{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    height: 800px;
+  }
+
+  &__container{
+    max-width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  &__link{
+    color: #ffffff;
+  }
+
+  &__title, &__text{
+    text-align: right;
+  }
+
+  &__title{
+    line-height: 56px;
+    text-transform: uppercase;
+
+    font: {
+      size: 48px;
+      weight: 400;
+    }
+  }
+}
+
+.swiper-pagination {
+  color: #ff2;
+  text-align: center;
+  max-width: 140px;
+  display: flex;
   justify-content: space-between;
 }
 
-.header__title{
-  margin-top: auto;
-  line-height: 235px;
-  color: #0D302C;
-  font: {
-    family: 'Raleway', sans-serif;
-    size: 200px;
-    weight: bold;
-  }
+.swiper-pagination-bullet {
+  width: 15px;
+  height: 15px;
+  background-color: #00B2A0;
 }
 
-.header__subtitle{
-  line-height: 28px;
-  color: #000;
-  display: flex;
-  justify-content: center;
-  margin-bottom: auto;
-  font: {
-    size: 24px;
-    weight: normal;
-  }
+:root {
+  --swiper-theme-color: #fff;
 }
 
-.header__icon{
-  display: flex;
-  justify-content: center;
-  margin-bottom: 92px;
+.swiper-pagination-bullet-horizontal-gap {
+  margin: 0;
 }
-
